Fixes #106 - Logout link is in light gray over white background, hard to read

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -100,6 +100,9 @@ header {
         margin-left: 5px;
       }
     }
+    .dropdown-content > li >  a {
+      @extend .black-text;
+    }
   }
 }
 
